--- a/html/community/view.html
+++ b/html/community/view.html
@@ -40,65 +40,73 @@
 
 	<header>
 		<div class="container">
-			<span class="logo-wrap"><em class="hidden-txt">로고 이미지</em></span>
+			<span class="logo-wrap"><a href="index.html"><em class="hidden-txt">로고 이미지</em></a></span>
 			<hgroup id="h-menu" class="inner-cts clear">
 				<div class="gnb">
 					<ul>
-						<li><a href="#">프리랜서 등록</a></li>
-						<li><a href="#">프로젝트 등록</a></li>
-						<li><a href="#" class="search">프로젝트 검색</a></li>
+						<li><a href="../partner/create.html">프리랜서 등록</a></li>
+						<li><a href="../project/create.html">프로젝트 등록</a></li>
+						<li><a href="../project/search.html" class="search">프로젝트 검색</a></li>
 					</ul>
 				</div>
 				<div class="member">
 					<ul>
 						<!-- 로그인 전 -->
-						<li><a href="">회원가입</a></li>
-						<li><a href="">로그인</a></li>
+						<li class="join" tabindex=0>
+							<a href="">회원가입</a>
+							<div class="h-center">
+								<div class="animate fast fadeInUp_">
+									<span><a href="../partner/signup.html"><em class="txt-rendering">프리랜서</em></a></span>
+									<span><a href="../client/signup.html"><em class="txt-rendering">기업회원</em></a></span>
+								</div>
+							</div>
+						</li>
+						<li><a href="../member/signin.html">로그인</a></li>
 						<!-- 로그인 후 
-						<li><a href="">마이페이지</a></li>
-						<li><a href="">로그아웃</a></li>
+						<li><a href="../member/partners_mypage.html">마이페이지</a></li>
+						<li><a href="javascript:void(0);">로그아웃</a></li>
 						-->
 					</ul>
 				</div>
 			</hgroup>	
 			<nav class="menu-all">
 				<a href="#menu-all"><span><em class="hidden-txt">전체메뉴</em></span></a>
-				<ul>
-					<li class="prj-add"><a href="#"><em class="hidden-txt">메뉴추가</em></a></li>
-					<li class="prj-search"><a href="#"><em class="hidden-txt">메뉴검색</em></a></li>
+				<ul class="quick">
+					<li class="prj-add"><a href="../project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a></li>
+					<li class="prj-search"><a href="../project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a></li>
 				</ul>
 				<div>
-					<ul class="member animate fadeInUp">
+					<ul class="member animate fast fadeInDown">
 						<!-- 로그인 전 -->
-						<li><a href="#">로그인</a></li>
+						<li><a href="../member/signin.html">로그인</a></li>
 						<li class="join">
 							<ul>
-								<li><a href="#">프리랜서 가입</a></li>
-								<li><a href="#">기업회원 가입</a></li>
+								<li><a href="../partner/signup.html">프리랜서 가입</a></li>
+								<li><a href="../client/signup.html">기업회원 가입</a></li>
 							</ul>
 						</li>
 						<!-- 로그인 후 
-						<li><a href="#">로그아웃</a></li>
-						<li><a href="#">마이페이지</a></li>
+						<li><a href="javascript:void(0);">로그아웃</a></li>
+						<li><a href="../member/partners_mypage.html">마이페이지</a></li>
 						-->
 					</ul>
-					<ul class="category animate fadeInUp">
-							<li><a href="#">프로젝트 검색</a></li>
-							<li><a href="#">프로젝트 등록</a></li>
-							<li><a href="#">프리랜서 등록</a></li>
+					<ul class="category animate fast fadeInDown">
+							<li><a href="../project/search.html">프로젝트 검색</a></li>
+							<li><a href="../project/create.html">프로젝트 등록</a></li>
+							<li><a href="../partner/create.html">프리랜서 등록</a></li>
 							<li>
-								<a href="">위플즈 소개</a>
+								<a href="../introduce/we_people.html">위플즈 소개</a>
 								<ul class="depth2">
-									<li><a href="#">We:People</a></li>
-									<li><a href="#">We:Project</a></li>
+									<li><a href="../introduce/we_people.html">We:People</a></li>
+									<li><a href="../introduce/we_project.html">We:Project</a></li>
 								</ul>
 							</li>
 							<li>
-								<a href="">커뮤니티</a>
+								<a href="../community/list.html">커뮤니티</a>
 								<ul class="depth2">
-									<li><a href="#">1:1문의</a></li>
-									<li><a href="#">FAQ</a></li>
-									<li><a href="#">위플즈 커뮤니티</a></li>
+									<li><a href="../community/inquiry.html">1:1문의</a></li>
+									<li><a href="../community/faq.html">FAQ</a></li>
+									<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
 								</ul>
 							</li>
 						</ul>	
@@ -158,7 +166,7 @@
 						<p>&nbsp;</p>
 						<p>HBO맥스를 통해 공개된 &lt;잭스나이더의 저스티스 리그&gt;는 DC 코믹스 및 영화팬들의 강한 요구에 잭 스나이더 감독이 감응한 결과물이다. 지구에 흩어져 있는 일종의 유기체 무기인 마더박스를 모아 세상을 정복하려는 우주 빌런 다크사이드를 대항해 메타휴먼들로 이뤄진 팀을 결성하려는 배트맨(벤 애플렉), 그리고 하나둘 모이기 시작한 초인들의 활약을 그리고 있다.</p>
 					</div>
-					<div class="btn-wrap align-c"><button type="button" class="btn-type-sm purple"><em class="txt-rendering">목록보기</em></button></div>
+					<div class="btn-wrap align-c"><button type="button" class="btn-type-sm purple" onclick="javascript:location.href='../community/list.html'"><em class="txt-rendering">목록보기</em></button></div>
 				</div>
 			</div><!-- // contents -->
 		</div><!-- // contents-wrap -->
@@ -166,9 +174,9 @@
 	<footer>
 		<div class="inner-wrap">
 			<ul>
-				<li><a href="#">회사소개</a></li>
-				<li><a href="#">1:1문의</a></li>
-				<li><a href="#">FAQ</a></li>
+				<li><a href="../introduce/we_people.html">회사소개</a></li>
+				<li><a href="../community/inquiry.html">1:1문의</a></li>
+				<li><a href="../community/faq.html">FAQ</a></li>
 				<li><a href="#">이용약관</a></li>
 				<li><a href="#" class="privacy-policy">개인정보처리방침</a></li>
 				<li><a href="#">공지사항</a></li>
