--- a/html/partner/modify.html
+++ b/html/partner/modify.html
@@ -597,19 +597,10 @@
 					</div><!-- // contents-body (자격증등록)-->
 
 					<div class="btn-wrap align-c">
-						<button type="submit" class="btn-type-lg purple"><em class="txt-rendering ft-md">등록하기</em></button>
+						<button type="submit" class="btn-type-lg purple"><em class="txt-rendering ft-md">수정하기</em></button>
 						<button type="button" class="btn-type-mid"><em class="txt-rendering ft-md">취소</em></button>
 					</div>
 				</form>
-
-				<div class="toolTip block up">
-					<div>
-						<p class="txt-rendering">
-							<span>회원 등록</span>을 하시면 <span>프로젝트 지원</span>을 하실 수 있습니다<br/>
-							단, 등록된 회원정보의 사실 여부 확인을 위해 담당 매니저가 연락을 드릴 수도 있습니다.
-						</p>
-					</div>
-				</div>
 			</div><!-- // contents -->
 		</div><!-- // contents-wrap -->
 	</div><!-- // #wrap -->
