--- a/html/client/modify.html
+++ b/html/client/modify.html
@@ -385,18 +385,10 @@
 					</div><!-- // contents-body (담당자정보)-->
 
 					<div class="btn-wrap align-c">
-						<button type="submit" class="btn-type-lg purple"><em class="txt-rendering ft-md">등록하기</em></button>
+						<button type="submit" class="btn-type-lg purple"><em class="txt-rendering ft-md">수정하기</em></button>
 						<button type="button" class="btn-type-mid"><em class="txt-rendering ft-md">취소</em></button>
 					</div>
 				</form>
-
-				<div class="toolTip block up">
-					<div>
-						<p class="txt-rendering">
-							회원가입을 하시면 <span>무료로 프로젝트 등록</span>을 하실 수 있습니다
-						</p>
-					</div>
-				</div>
 			</div><!-- // contents -->
 		</div><!-- // contents-wrap -->
 	</div><!-- // #wrap -->
