--- a/html/introduce/we_people.html
+++ b/html/introduce/we_people.html
@@ -40,65 +40,73 @@
 
 	<header>
 		<div class="container">
-			<span class="logo-wrap"><em class="hidden-txt">로고 이미지</em></span>
+			<span class="logo-wrap"><a href="index.html"><em class="hidden-txt">로고 이미지</em></a></span>
 			<hgroup id="h-menu" class="inner-cts clear">
 				<div class="gnb">
 					<ul>
-						<li><a href="#">프리랜서 등록</a></li>
-						<li><a href="#">프로젝트 등록</a></li>
-						<li><a href="#" class="search">프로젝트 검색</a></li>
+						<li><a href="../partner/create.html">프리랜서 등록</a></li>
+						<li><a href="../project/create.html">프로젝트 등록</a></li>
+						<li><a href="../project/search.html" class="search">프로젝트 검색</a></li>
 					</ul>
 				</div>
 				<div class="member">
 					<ul>
 						<!-- 로그인 전 -->
-						<li><a href="">회원가입</a></li>
-						<li><a href="">로그인</a></li>
+						<li class="join" tabindex=0>
+							<a href="">회원가입</a>
+							<div class="h-center">
+								<div class="animate fast fadeInUp_">
+									<span><a href="../partner/signup.html"><em class="txt-rendering">프리랜서</em></a></span>
+									<span><a href="../client/signup.html"><em class="txt-rendering">기업회원</em></a></span>
+								</div>
+							</div>
+						</li>
+						<li><a href="../member/signin.html">로그인</a></li>
 						<!-- 로그인 후 
-						<li><a href="">마이페이지</a></li>
-						<li><a href="">로그아웃</a></li>
+						<li><a href="../member/partners_mypage.html">마이페이지</a></li>
+						<li><a href="javascript:void(0);">로그아웃</a></li>
 						-->
 					</ul>
 				</div>
 			</hgroup>	
 			<nav class="menu-all">
 				<a href="#menu-all"><span><em class="hidden-txt">전체메뉴</em></span></a>
-				<ul>
-					<li class="prj-add"><a href="#"><em class="hidden-txt">메뉴추가</em></a></li>
-					<li class="prj-search"><a href="#"><em class="hidden-txt">메뉴검색</em></a></li>
+				<ul class="quick">
+					<li class="prj-add"><a href="../project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a></li>
+					<li class="prj-search"><a href="../project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a></li>
 				</ul>
 				<div>
-					<ul class="member animate fadeInDown">
+					<ul class="member animate fast fadeInDown">
 						<!-- 로그인 전 -->
-						<li><a href="#">로그인</a></li>
+						<li><a href="../member/signin.html">로그인</a></li>
 						<li class="join">
 							<ul>
-								<li><a href="#">프리랜서 가입</a></li>
-								<li><a href="#">기업회원 가입</a></li>
+								<li><a href="../partner/signup.html">프리랜서 가입</a></li>
+								<li><a href="../client/signup.html">기업회원 가입</a></li>
 							</ul>
 						</li>
 						<!-- 로그인 후 
-						<li><a href="#">로그아웃</a></li>
-						<li><a href="#">마이페이지</a></li>
+						<li><a href="javascript:void(0);">로그아웃</a></li>
+						<li><a href="../member/partners_mypage.html">마이페이지</a></li>
 						-->
 					</ul>
-					<ul class="category animate fadeInDown">
-							<li><a href="#">프로젝트 검색</a></li>
-							<li><a href="#">프로젝트 등록</a></li>
-							<li><a href="#">프리랜서 등록</a></li>
+					<ul class="category animate fast fadeInDown">
+							<li><a href="../project/search.html">프로젝트 검색</a></li>
+							<li><a href="../project/create.html">프로젝트 등록</a></li>
+							<li><a href="../partner/create.html">프리랜서 등록</a></li>
 							<li>
-								<a href="">위플즈 소개</a>
+								<a href="../introduce/we_people.html">위플즈 소개</a>
 								<ul class="depth2">
-									<li><a href="#">We:People</a></li>
-									<li><a href="#">We:Project</a></li>
+									<li><a href="../introduce/we_people.html">We:People</a></li>
+									<li><a href="../introduce/we_project.html">We:Project</a></li>
 								</ul>
 							</li>
 							<li>
-								<a href="">커뮤니티</a>
+								<a href="../community/list.html">커뮤니티</a>
 								<ul class="depth2">
-									<li><a href="#">1:1문의</a></li>
-									<li><a href="#">FAQ</a></li>
-									<li><a href="#">위플즈 커뮤니티</a></li>
+									<li><a href="../community/inquiry.html">1:1문의</a></li>
+									<li><a href="../community/faq.html">FAQ</a></li>
+									<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
 								</ul>
 							</li>
 						</ul>	
@@ -220,16 +228,16 @@
 						</div>
 					</li>
 				</ul>
-				<div class="btn-wrap align-c"><button class="btn-type-lg purple"><em class="ft-md">프리랜서 가입하기</em></button></div>
+				<div class="btn-wrap align-c"><button class="btn-type-lg purple" onclick="javascript:location.href='../partner/signup.html'"><em class="ft-md">프리랜서 가입하기</em></button></div>
 			</div>
 		</section><!-- // section-wrap-02 -->
 	</div><!-- // #wrap -->
 	<footer>
 		<div class="inner-wrap">
 			<ul>
-				<li><a href="#">회사소개</a></li>
-				<li><a href="#">1:1문의</a></li>
-				<li><a href="#">FAQ</a></li>
+				<li><a href="../introduce/we_people.html">회사소개</a></li>
+				<li><a href="../community/inquiry.html">1:1문의</a></li>
+				<li><a href="../community/faq.html">FAQ</a></li>
 				<li><a href="#">이용약관</a></li>
 				<li><a href="#" class="privacy-policy">개인정보처리방침</a></li>
 				<li><a href="#">공지사항</a></li>
@@ -247,7 +255,7 @@
 
 			<p class="copy"><span>&copy; 2022 Wipplz Corp.</span></p>
 		</div>
-	</footer>
+	</footer><!-- // footer -->
 	<div class="bg-area col-4">백그라운드 영역 01</div>
 	<div class="bg-area col-4">백그라운드 영역 02</div>
 	<div class="bg-area col-4">백그라운드 영역 03</div>
