--- a/html/index.html
+++ b/html/index.html
@@ -46,9 +46,9 @@
 			<hgroup id="h-menu" class="inner-cts clear">
 				<div class="gnb">
 					<ul>
-						<li><a href="/partner/create.html">프리랜서 등록</a></li>
-						<li><a href="/project/create.html">프로젝트 등록</a></li>
-						<li><a href="/project/search.html" class="search">프로젝트 검색</a></li>
+						<li><a href="partner/create.html">프리랜서 등록</a></li>
+						<li><a href="project/create.html">프로젝트 등록</a></li>
+						<li><a href="project/search.html" class="search">프로젝트 검색</a></li>
 					</ul>
 				</div>
 				<div class="member">
@@ -58,12 +58,12 @@
 							<a href="">회원가입</a>
 							<div class="h-center">
 								<div class="animate fast fadeInUp_">
-									<span><a href="/partner/signup.html"><em class="txt-rendering">프리랜서</em></a></span>
-									<span><a href="/client/signup.html"><em class="txt-rendering">기업회원</em></a></span>
+									<span><a href="partner/signup.html"><em class="txt-rendering">프리랜서</em></a></span>
+									<span><a href="client/signup.html"><em class="txt-rendering">기업회원</em></a></span>
 								</div>
 							</div>
 						</li>
-						<li><a href="/member/signin.html">로그인</a></li>
+						<li><a href="member/signin.html">로그인</a></li>
 						<!-- 로그인 후 
 						<li><a href="/member/partners_mypage.html">마이페이지</a></li>
 						<li><a href="javascript:void(0);">로그아웃</a></li>
@@ -74,41 +74,41 @@
 			<nav class="menu-all">
 				<a href="#menu-all"><span><em class="hidden-txt">전체메뉴</em></span></a>
 				<ul class="quick">
-					<li class="prj-add"><a href="/project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a></li>
-					<li class="prj-search"><a href="/project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a></li>
+					<li class="prj-add"><a href="project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a></li>
+					<li class="prj-search"><a href="project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a></li>
 				</ul>
 				<div>
 					<ul class="member animate fast fadeInDown">
 						<!-- 로그인 전 -->
-						<li><a href="/member/signin.html">로그인</a></li>
+						<li><a href="member/signin.html">로그인</a></li>
 						<li class="join">
 							<ul>
-								<li><a href="/partner/signup.html">프리랜서 가입</a></li>
-								<li><a href="/client/signup.html">기업회원 가입</a></li>
+								<li><a href="partner/signup.html">프리랜서 가입</a></li>
+								<li><a href="client/signup.html">기업회원 가입</a></li>
 							</ul>
 						</li>
 						<!-- 로그인 후 
 						<li><a href="javascript:void(0);">로그아웃</a></li>
-						<li><a href="/member/partners_mypage.html">마이페이지</a></li>
+						<li><a href="member/partners_mypage.html">마이페이지</a></li>
 						-->
 					</ul>
 					<ul class="category animate fast fadeInDown">
-							<li><a href="/project/search.html">프로젝트 검색</a></li>
-							<li><a href="/project/create.html">프로젝트 등록</a></li>
-							<li><a href="/partner/create.html">프리랜서 등록</a></li>
+							<li><a href="project/search.html">프로젝트 검색</a></li>
+							<li><a href="project/create.html">프로젝트 등록</a></li>
+							<li><a href="partner/create.html">프리랜서 등록</a></li>
 							<li>
-								<a href="/introduce/we_people.html">위플즈 소개</a>
+								<a href="introduce/we_people.html">위플즈 소개</a>
 								<ul class="depth2">
-									<li><a href="/introduce/we_people.html">We:People</a></li>
-									<li><a href="/introduce/we_project.html">We:Project</a></li>
+									<li><a href="introduce/we_people.html">We:People</a></li>
+									<li><a href="introduce/we_project.html">We:Project</a></li>
 								</ul>
 							</li>
 							<li>
-								<a href="/community/list.html">커뮤니티</a>
+								<a href="community/list.html">커뮤니티</a>
 								<ul class="depth2">
-									<li><a href="/community/inquiry.html">1:1문의</a></li>
-									<li><a href="/community/faq.html">FAQ</a></li>
-									<li><a href="/community/list.html">위플즈 커뮤니티</a></li>
+									<li><a href="community/inquiry.html">1:1문의</a></li>
+									<li><a href="community/faq.html">FAQ</a></li>
+									<li><a href="community/list.html">위플즈 커뮤니티</a></li>
 								</ul>
 							</li>
 						</ul>	
@@ -146,9 +146,9 @@
 										</ul>
 									</div>
 									<div class="btn-wrap-inline button-area align-r">
-										<button type="button" class="btn-type-customed benefit" onclick="javascript:location.href='/introduce/we_people.html'"><em class="txt-rendering">프리랜서 혜택보기</em></button><br/>
-										<button type="button" class="btn-type-icon search" onclick="javascript:location.href='/project/search.html'"><em class="txt-rendering">프로젝트 검색</em></button><br/>
-										<button type="button" class="btn-type-icon enrollment" onclick="javascript:location.href='/project/create.html'"><em class="txt-rendering">프로젝트 등록</em></button>
+										<button type="button" class="btn-type-customed benefit" onclick="javascript:location.href='introduce/we_people.html'"><em class="txt-rendering">프리랜서 혜택보기</em></button><br/>
+										<button type="button" class="btn-type-icon search" onclick="javascript:location.href='project/search.html'"><em class="txt-rendering">프로젝트 검색</em></button><br/>
+										<button type="button" class="btn-type-icon enrollment" onclick="javascript:location.href='project/create.html'"><em class="txt-rendering">프로젝트 등록</em></button>
 									</div>
 								</dd>
 							</dl> 
@@ -169,8 +169,8 @@
 										</ul>
 									</div>
 									<div class="btn-wrap-inline button-area align-r">
-										<button type="button" class="btn-type-customed benefit" onclick="javascript:location.href='/introduce/we_project.html'"><em class="txt-rendering">기업회원 혜택보기</em></button><br/>
-										<button type="button" class="btn-type-icon prj-enrollment" onclick="javascript:location.href='/project/create.html'"><em class="txt-rendering">프로젝트 등록</em></button>
+										<button type="button" class="btn-type-customed benefit" onclick="javascript:location.href='introduce/we_project.html'"><em class="txt-rendering">기업회원 혜택보기</em></button><br/>
+										<button type="button" class="btn-type-icon prj-enrollment" onclick="javascript:location.href='project/create.html'"><em class="txt-rendering">프로젝트 등록</em></button>
 									</div>
 								</dd>
 							</dl>
@@ -191,7 +191,7 @@
 										</ul>
 									</div>
 									<div class="btn-wrap-inline button-area align-r">
-										<button type="button" class="btn-type-customed dialog" onclick="javascript:location.href='/community/list.html'"><em class="txt-rendering">커뮤니티 바로가기</em></button>
+										<button type="button" class="btn-type-customed dialog" onclick="javascript:location.href='community/list.html'"><em class="txt-rendering">커뮤니티 바로가기</em></button>
 									</div>
 								</dd>
 							</dl> 
@@ -272,8 +272,8 @@
 											</div>
 										</div>
 										<div class="btn-wrap col-2">
-											<button class="btn-type purple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
+											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -319,8 +319,8 @@
 											</div>
 										</div>
 										<div class="btn-wrap col-2">
-											<button class="btn-type purple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
+											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -369,8 +369,8 @@
 											</div>
 										</div>
 										<div class="btn-wrap col-2">
-											<button class="btn-type purple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
+											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -417,8 +417,8 @@
 											</div>
 										</div>
 										<div class="btn-wrap col-2">
-											<button class="btn-type purple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
+											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -462,8 +462,8 @@
 											</div>
 										</div>
 										<div class="btn-wrap col-2">
-											<button class="btn-type purple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
+											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -509,8 +509,8 @@
 											</div>
 										</div>
 										<div class="btn-wrap col-2">
-											<button class="btn-type purple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
+											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -559,8 +559,8 @@
 											</div>
 										</div>
 										<div class="btn-wrap col-2">
-											<button class="btn-type purple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
+											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -607,8 +607,8 @@
 											</div>
 										</div>
 										<div class="btn-wrap col-2">
-											<button class="btn-type purple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='/project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
+											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -667,14 +667,14 @@
 									<dt><strong>1:1 문의</strong></dt>
 									<dd><span class="txt-rendering">프리랜서 &middot; 기업/공공기관 &middot; 제휴 등을<br/> 위플즈에게 문의하세요.</span></dd>
 								</dl>
-								<button class="btn-type-arrow" onclick="javascript:location.href='/community/inquiry.html'"><em class="hidden-txt">바로가기</em></button>
+								<button class="btn-type-arrow" onclick="javascript:location.href='community/inquiry.html'"><em class="hidden-txt">바로가기</em></button>
 							</li>
 							<li class="animate animate-delay-02 fadeInUp">
 								<dl>
 									<dt><strong>FAQ</strong></dt>
 									<dd><span class="txt-rendering">위플즈에게 자주 물어보는 질문에 대한<br/> 답변을 확인하세요.</span></dd>
 								</dl>
-								<button class="btn-type-arrow" onclick="javascript:location.href='/community/faq.html'"><em class="hidden-txt">바로가기</em></button>
+								<button class="btn-type-arrow" onclick="javascript:location.href='community/faq.html'"><em class="hidden-txt">바로가기</em></button>
 							</li>
 							<li class="animate animate-delay-03 fadeInUp">
 								<dl>
@@ -733,9 +733,9 @@
 			<footer>
 				<div class="inner-wrap">
 					<ul>
-						<li><a href="/introduce/we_people.html">회사소개</a></li>
-						<li><a href="/community/inquiry.html">1:1문의</a></li>
-						<li><a href="/community/faq.html">FAQ</a></li>
+						<li><a href="introduce/we_people.html">회사소개</a></li>
+						<li><a href="community/inquiry.html">1:1문의</a></li>
+						<li><a href="community/faq.html">FAQ</a></li>
 						<li><a href="#">이용약관</a></li>
 						<li><a href="#" class="privacy-policy">개인정보처리방침</a></li>
 						<li><a href="#">공지사항</a></li>
